# bumblebee

./: .gitignore  .gitreview  Dockerfile  Makefile  README.md  TESTS.md  docker-compose.yml  env-template  manage.py  nukedb.sh  project.config  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
docker/: Dockerfile  apache.conf  docker-run-bumblebee.sh  docker-run-expirer.sh  docker-run-rqscheduler.sh  docker-run-rqworker.sh  docker-run.sh  docker-setup.sh
docker-init/: README.md  initial_desktop_type.yaml  setup-desktop-type.sh  setup-openstack.sh  setup-volume.sh
docker-init/keycloak/: bumblebee-realm.json
docker-init/mariadb/: 01.sql
guacamole/: 0001_initial.py  fields.py  models.py  tests.py  utils.py
guacamole/migrations/: 0001_initial.py  (+1 more)
heat_stack/: server_member.yaml  stack.yaml  stack_az_network.yaml  stack_bastion.yaml  stack_dev.yaml  stack_guacamole.yaml  stack_guacamole_server.yaml  stack_network.yaml
initdb/: 01.sql  bumblebee.sql  keycloak.sql
initkc/: bumblebee-realm.json
researcher_desktop/: admin.py  apps.py  constants.py  models.py  tests.py  urls.py  views.py
researcher_workspace/: __init__.py  admin.py  apps.py  auth.py  constants.py  context_processors.py  forms.py  health.py  local_settings_template.py  metrics.py  middleware.py  models.py  settings.py  signals.py  urls.py  views.py  wsgi.py
scripts/: nukedb.sh  watchrq.sh
specialty_resources/: README.md  apps.py  constants.py  forms.py  urls.py  views.py
vm_manager/: admin.py  apps.py  constants.py  models.back  models.py  urls.py  views.py
(+191 files in other folders)
