[metadata]
name = bumblebee
author = ARDC
author-email = coreservices@ardc.edu.au
summary = ARDC Virtual Desktop service
description-file = README.md
home-page = https://github.com/NeCTAR-RC/bumblebee
license = Apache-2
classifier =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Environment :: OpenStack
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
keywords =
    openstack
    desktop
    launcher

